--- a/.github/workflows/dast.yml
+++ b/.github/workflows/dast.yml
@@ -1,8 +1,5 @@
----
-- name: ZAP Automation Framework Scan
-  uses: zaproxy/action-af@v0.2.0
-  with:
-    plan: null
-    docker_name: null
-    docker_env_vars: null
-    cmd_options: null
+steps:
+  - name: ZAP Scan
+    uses: zaproxy/action-full-scan@v0.12.0
+    with:
+      target: 'https://www.zaproxy.org/'
