--- a/.github/workflows/dast.yml
+++ b/.github/workflows/dast.yml
@@ -1,5 +1,50 @@
-steps:
-  - name: ZAP Scan
-    uses: zaproxy/action-full-scan@v0.12.0
-    with:
-      target: 'https://www.zaproxy.org/'
+name: DAST Scan with OWASP ZAP
+
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
+
+jobs:
+  zap-scan:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v2
+
+    - name: Set up JDK (if needed for your application)
+      uses: actions/setup-java@v2
+      with:
+        java-version: '11'  # Specify your app's Java version if applicable
+
+    - name: Run OWASP ZAP Security Scan
+      uses: zaproxy/action-full-scan@v0.4.0
+      with:
+        target: 'http://your-app-url.com'   # Replace with your app's URL to scan
+        # Optional: If using authentication (e.g., basic auth), you can pass credentials
+        # auth-url: 'http://your-app-url.com/login'
+        # username: 'your-username'
+        # password: 'your-password'
+
+    - name: Upload ZAP scan report
+      uses: actions/upload-artifact@v2
+      with:
+        name: zap-report
+        path: zap_report.html  # Path to the generated ZAP report file
+
+    - name: Clean up ZAP Docker container
+      run: |
+        docker ps -q --filter "name=zap" | xargs -r docker stop
+        docker ps -a -q --filter "name=zap" | xargs -r docker rm
+
+    # Optional: Add a step to fail the workflow if vulnerabilities are found
+    - name: Check if ZAP found vulnerabilities
+      run: |
+        if grep -q "High" zap_report.html; then
+          echo "Vulnerabilities found! Failing the build.";
+          exit 1;
+        fi
