--- a/.github/workflows/dast.yml
+++ b/.github/workflows/dast.yml
@@ -25,6 +25,7 @@ jobs:
       uses: zaproxy/action-full-scan@v0.4.0
       with:
         target: 'http://your-app-url.com'   # Replace with your app's URL to scan
+        report-path: zap_report.html
         # Optional: If using authentication (e.g., basic auth), you can pass credentials
         # auth-url: 'http://your-app-url.com/login'
         # username: 'your-username'
