--- a/.github/workflows/dast.yml
+++ b/.github/workflows/dast.yml
@@ -24,18 +24,14 @@ jobs:
     - name: Run OWASP ZAP Security Scan
       uses: zaproxy/action-full-scan@v0.4.0
       with:
-        target: 'http://your-app-url.com'   # Replace with your app's URL to scan
-        report-path: zap_report.html
-        # Optional: If using authentication (e.g., basic auth), you can pass credentials
-        # auth-url: 'http://your-app-url.com/login'
-        # username: 'your-username'
-        # password: 'your-password'
+        target: 'http://your-app-url.com'   # Replace with your app's URL
+        report-path: './zap_report.html'  # Save the report in the root of your project
 
     - name: Upload ZAP scan report
       uses: actions/upload-artifact@v2
       with:
         name: zap-report
-        path: zap_report.html  # Path to the generated ZAP report file
+        path: './zap_report.html'  # Ensure this matches the path of the generated report
 
     - name: Clean up ZAP Docker container
       run: |
