--- a/.github/workflows/dast.yml
+++ b/.github/workflows/dast.yml
@@ -2,11 +2,9 @@ name: DAST Scan with OWASP ZAP
 
 on:
   push:
-    branches:
-      - main
+    branches: [ main ]
   pull_request:
-    branches:
-      - main
+    branches: [ main ]
 
 jobs:
   zap-scan:
@@ -16,34 +14,28 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v2
 
-
-    - name: Run OWASP ZAP Security Scan
-      uses: zaproxy/action-full-scan@v0.4.0
+    - name: Run OWASP ZAP Baseline Scan
+      uses: zaproxy/action-baseline@v0.9.0
       with:
-        target: 'https://github.com/pintoo-5/testrepo/'   # Replace with your app's URL
-        report-path: './zap_report.html'  # Save the report in the root of your project
+        target: 'https://your-live-app-url.com'  # Replace with the live URL of your app
+        cmd_options: '-t 120'  # Optional: set a timeout
+        allow_issue_writing: false
 
-
-    - name: Check artifact folder
+    - name: Rename ZAP report
       run: |
-        echo "Files in build:"
-        ls -la ./build
-    
-   # - name: Upload ZAP scan report
-   #   uses: actions/upload-artifact@v3
-   #   with:
-    #    name: zap-report
-     #   path: './zap_report.html'  # Ensure this matches the path of the generated report
+        mv zap.out zap_report.html
 
-    - name: Clean up ZAP Docker container
-      run: |
-        docker ps -q --filter "name=zap" | xargs -r docker stop
-        docker ps -a -q --filter "name=zap" | xargs -r docker rm
+    - name: Upload ZAP scan report
+      uses: actions/upload-artifact@v3
+      with:
+        name: zap-report
+        path: zap_report.html
 
-    # Optional: Add a step to fail the workflow if vulnerabilities are found
-    - name: Check if ZAP found vulnerabilities
+    - name: Fail if high risk vulnerabilities found
       run: |
         if grep -q "High" zap_report.html; then
-          echo "Vulnerabilities found! Failing the build.";
+          echo "❌ High risk vulnerabilities found!";
           exit 1;
+        else
+          echo "✅ No high risk vulnerabilities found.";
         fi
