--- a/.github/workflows/dast.yml
+++ b/.github/workflows/dast.yml
@@ -17,7 +17,7 @@ jobs:
     - name: Run OWASP ZAP Baseline Scan
       uses: zaproxy/action-baseline@v0.9.0
       with:
-        target: 'https://your-live-app-url.com'  # Replace with the live URL of your app
+        target: 'https://github.com/pintoo-5/testrepo'  # Replace with the live URL of your app
         cmd_options: '-t 120'  # Optional: set a timeout
         allow_issue_writing: false
 
