--- a/.github/workflows/dast.yml
+++ b/.github/workflows/dast.yml
@@ -16,7 +16,7 @@ jobs:
           docker_name: 'ghcr.io/zaproxy/zaproxy:stable'
           target: 'https://www.zaproxy.org/'
           #rules_file_name: '.zap/rules.tsv'
-          cmd_options: '-t 180'
+          cmd_options: '-m 180'
           fail_action: false
 
       - name: Fail if High risk vulnerabilities found
