--- a/.github/workflows/dast.yml
+++ b/.github/workflows/dast.yml
@@ -18,6 +18,12 @@ jobs:
           #rules_file_name: '.zap/rules.tsv'
           cmd_options: '-m 180'
           fail_action: false
+          
+      - name: Upload ZAP HTML report
+        uses: actions/upload-artifact@v3
+        with:
+          name: zap-report
+          path: report_html.html
 
       - name: Fail if High risk vulnerabilities found
         run: |
