--- a/.github/workflows/dast.yml
+++ b/.github/workflows/dast.yml
@@ -1,36 +1,36 @@
-on: [push]
+name: OWASP ZAP DAST Scan
+
+on:
+  push:
+    branches: [main]
+  pull_request:
+    branches: [main]
 
 jobs:
   zap_scan:
     runs-on: ubuntu-latest
-    name: Scan the webapplication
+
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-        with:
-          ref: main
-      - name: ZAP Scan
-        uses: zaproxy/action-full-scan@v0.12.0
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          docker_name: 'ghcr.io/zaproxy/zaproxy:stable'
-          target: 'https://www.zaproxy.org/'
-          #rules_file_name: '.zap/rules.tsv'
-          cmd_options: '-a'
-          fail_action: false
-          
+    - name: Checkout repo
+      uses: actions/checkout@v3
 
-      - name: Fail if High risk vulnerabilities found
-        run: |
-          if [ -f zap_report.html ]; then
-            if grep -iq "<td>High</td>" zap_report.html; then
-              echo "❌ High risk vulnerabilities found!"
-              exit 1
-            else
-              echo "✅ No high risk vulnerabilities found."
-            fi
-          else
-            echo "⚠️ ZAP report not found! Skipping check."
-            exit 1
-          fi
+    - name: Start app in background
+      run: |
+        npm install
+        nohup npm start &
+        sleep 10  # Wait for the app to start
 
+    - name: Run OWASP ZAP Baseline Scan
+      run: |
+        docker run --network="host" \
+          -v ${{ github.workspace }}/zap-report:/zap/wrk/:rw \
+          owasp/zap2docker-stable zap-baseline.py \
+          -t http://localhost:3000 \
+          -r zap_report.html \
+          -config api.disablekey=true
+
+    - name: Upload ZAP HTML Report
+      uses: actions/upload-artifact@v4
+      with:
+        name: zap-report
+        path: zap-report/zap_report.html
