--- a/.github/workflows/dast.yml
+++ b/.github/workflows/dast.yml
@@ -28,14 +28,12 @@ jobs:
         sleep 10
 
     - name: Run OWASP ZAP Baseline Scan
-      run: |
-        mkdir -p zap-report
-        docker run --network="host" \
-          -v ${{ github.workspace }}/zap-report:/zap/wrk/:rw \
-          owasp/zap2docker-stable zap-baseline.py \
-          -t http://localhost:3000 \
-          -r zap_report.html \
-          -config api.disablekey=true
+      uses: zaproxy/action-baseline@v0.10.0
+      with:
+        target: 'http://localhost:3000'
+        allow_failures: true
+        report_file: 'zap_report.html'
+
 
     - name: Upload ZAP HTML Report
       uses: actions/upload-artifact@v4
