--- a/.github/workflows/soos-dast-scan.yml
+++ b/.github/workflows/soos-dast-scan.yml
@@ -1,60 +1,61 @@
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-#
-# SOOS is the easy-to-integrate and affordable software security solution for your whole team.
-#
-# Learn more at https://soos.io/
-#
-# To use this action, perform the following steps:
-#
-# 1. Create an account on https://app.soos.io. SOOS offers a free 30 day trial for our SCA, DAST, and SBOM products.
-#
-# 2. Navigate to the "Integrate" page in the SOOS app (https://app.soos.io/integrate/dast/). Note the "API Credentials" section of this page; the keys you will need for the next step are here.
-#
-# 3. Set up your SOOS API Key and SOOS Client Id as Github Secrets named SOOS_API_KEY and SOOS_CLIENT_ID.
-#
-# 4. (Optional) If you'd like to upload SARIF results of DAST scans to GitHub, set SOOS_GITHUB_PAT with your Github Personal Access Token.
-#
-#  Check for the latest version here: https://github.com/marketplace/actions/soos-dast
-
-name: "SOOS DAST Scan"
+name: DAST Scan
 
 on:
   push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+    branches:
+      - main
+  workflow_dispatch:
 
 jobs:
-  soos:
-    permissions:
-      security-events: write # for uploading code scanning alert info
-      actions: read # only required for a private repository by github/codeql-action/upload-sarif to get the Action run status
-    name: SOOS DAST Analysis
+  build-and-scan:
     runs-on: ubuntu-latest
+
+    services:
+      web:
+        image: node:18
+        ports:
+          - 3000:3000
+        options: >-
+          --health-cmd="curl -f http://localhost:3000 || exit 1"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=5
+        volumes:
+          - ${{ github.workspace }}:/usr/src/app
+        env:
+          NODE_ENV: production
+        entrypoint: sh
+        command: >
+          -c "cd /usr/src/app &&
+              npm install &&
+              npm run build &&
+              npm run start"
+
     steps:
-      - name: Run SOOS DAST Analysis
-        uses: soos-io/soos-dast-github-action@a7eb40b94c1c81eb76b178ba1befdc21823f86fa
-        with:
-          client_id: ${{ secrets.SOOS_CLIENT_ID }}
-          api_key: ${{ secrets.SOOS_API_KEY }}
-          project_name: "<YOUR-PROJECT-NAME>"
-          scan_mode: "baseline"
-          target_url: "https://www.example.com/"
-          export_format: "Sarif"
-          export_file_type: "Json"
-      - name: Find and rename SARIF file since it is unique
+      - name: Checkout Code
+        uses: actions/checkout@v3
+
+      - name: Wait for web service to be ready
         run: |
-          file=$(find . -name "*.sarif.json" | head -n 1)
-          if [ -n "$file" ]; then
-            mv "$file" output.sarif.json
-            echo "Renamed $file to output.sarif.json"
-          else
-            echo "No SARIF file found" && exit 1
-          fi
-      - name: Upload SOOS DAST SARIF Report
-        uses: github/codeql-action/upload-sarif@v3
+          echo "Waiting for web service..."
+          sleep 30  # or use curl to poll
+
+      - name: Run ZAP Baseline Scan
+        uses: zaproxy/action-baseline@v0.10.0
         with:
-          sarif_file: output.sarif.json
+          target: http://localhost:3000
+          artifact_name: zap_report
+          fail_action: false  # Continue even if issues are found
+
+      - name: Run SOOS DAST (Optional)
+        uses: soos-io/soos-dast-github-action@v2
+        with:
+          apiKey: ${{ secrets.SOOS_API_KEY }}
+          projectName: "HealthKart"
+          scanMode: baseline
+          targetURL: http://localhost:3000
+          integrationName: GitHub
+          branchName: ${{ github.ref_name }}
+          buildURI: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
+          logLevel: INFO
+          onFailure: continue_on_failure
